--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
+    "react-hot-loader": "^1.3.0",
     "rucksack-css": "^0.8.6",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
